# hindsight

./: Cargo.toml  README.md
src/: analyzer.rs  lib.rs  main.rs  scanner.rs  tui.rs
